--- a/apps/control_app/web/manifest.json
+++ b/apps/control_app/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "overflow_car_app",
-    "short_name": "overflow_car_app",
+    "name": "control_app",
+    "short_name": "control_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
