--- a/apps/control_app/pubspec.yaml
+++ b/apps/control_app/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_vlc_player: ^7.4.2
   sensors_plus: ^6.1.0
   web_socket: ^0.1.6
+  flutter_bloc: ^8.1.6
+  overflow_car_api: ^1.0.0
+  local_storage: ^1.0.0
 
 dev_dependencies:
   flutter_test:
