--- a/apps/control_app/ios/Runner/Info.plist
+++ b/apps/control_app/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
+	<key>NSMotionUsageDescription</key>
+	<string>This app requires access to the gyroscope to provide steering data.</string>
 </dict>
 </plist>
