--- a/apps/control_app/pubspec.yaml
+++ b/apps/control_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   overflow_car_api: ^1.0.0
   local_storage: ^1.0.0
+  motion_sensors: ^0.1.0
 
 dev_dependencies:
   flutter_test:
