--- a/apps/control_app/android/app/build.gradle
+++ b/apps/control_app/android/app/build.gradle
@@ -35,7 +35,16 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            proguardFiles getDefaultProguardFile(
+                    'proguard-android-optimize.txt'),
+                    'proguard-rules.pro'
         }
+    }
+
+    packagingOptions {
+        // Fixes duplicate libraries build issue, 
+        // when your project uses more than one plugin that depend on C++ libs.
+        pickFirst 'lib/**/libc++_shared.so'
     }
 }
 
