--- a/apps/control_app/pubspec.yaml
+++ b/apps/control_app/pubspec.yaml
@@ -35,12 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  overflow_car_api: ^1.0.0
+  local_storage: ^1.0.0
+  car_bloc: ^1.0.0
   flutter_vlc_player: ^7.4.2
   sensors_plus: ^6.1.0
   web_socket: ^0.1.6
   flutter_bloc: ^8.1.6
-  overflow_car_api: ^1.0.0
-  local_storage: ^1.0.0
   motion_sensors:
     git:
       url: https://github.com/XuanHanTan-School/motion_sensors.git
