--- a/apps/control_app/pubspec.yaml
+++ b/apps/control_app/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  overflow_car_api: ^1.0.0
+  car_api: ^1.0.0
   local_storage: ^1.0.0
   car_bloc: ^1.0.0
   flutter_vlc_player: ^7.4.2
