--- a/packages/time_trial_bloc/pubspec.yaml
+++ b/packages/time_trial_bloc/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  time_trial_api: ^1.0.0
   flutter_bloc: ^8.1.6
 
 dev_dependencies:
