--- a/apps/control_app/pubspec.yaml
+++ b/apps/control_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   local_storage: ^1.0.0
   car_bloc: ^1.0.0
   time_trial_api: ^1.0.0
+  time_trial_bloc: ^1.0.0
   flutter_vlc_player: ^7.4.2
   sensors_plus: ^6.1.0
   web_socket: ^0.1.6
