--- a/packages/time_trial_bloc/pubspec.yaml
+++ b/packages/time_trial_bloc/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   time_trial_api: ^1.0.0
   flutter_bloc: ^8.1.6
+  rxdart: ^0.28.0
 
 dev_dependencies:
   lints: ^5.0.0
