Split control app views/pages/widgets into shared_car_components, utilities into app_utilities; Added live_view_app

--- a/packages/shared_car_components/pubspec.yaml
+++ b/packages/shared_car_components/pubspec.yaml
@@ -1,4 +1,4 @@
-name: control_app
+name: shared_car_components
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.6.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,26 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  shared_car_components: ^1.0.0
+  flutter_bloc: ^8.1.6
   car_api: ^1.0.0
   car_bloc: ^1.0.0
   time_trial_api: ^1.0.0
   time_trial_bloc: ^1.0.0
   app_utilities: ^1.0.0
   flutter_vlc_player: ^7.4.2
-  sensors_plus: ^6.1.0
-  web_socket: ^0.1.6
-  flutter_bloc: ^8.1.6
-  motion_sensors:
-    git:
-      url: https://github.com/XuanHanTan-School/motion_sensors.git
-      ref: 360c0f05cfc14503046469382480bfb7162a277c
-  file_picker: ^8.1.6
-  firebase_core: ^3.9.0
 
 dev_dependencies:
   flutter_test:
