--- a/apps/live_view_app/pubspec.yaml
+++ b/apps/live_view_app/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  shared_car_components: ^1.0.0
+  car_api: ^1.0.0
+  car_bloc: ^1.0.0
+  time_trial_api: ^1.0.0
+  time_trial_bloc: ^1.0.0
+  app_utilities: ^1.0.0
+  firebase_core: ^3.9.0
+  flutter_bloc: ^8.1.6
+  flutter_vlc_player: ^7.4.2
 
 dev_dependencies:
   flutter_test:
