Added iOS to live_view_app temporarily; Fixed UI

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "name": "Flutter (Live View App)",
             "type": "dart",
             "request": "launch",
-            "program": "apps/live_view_app/lib/main.dart"
+            "program": "apps/live_view_app/lib/main.dart",
         }
     ]
 }
