--- a/apps/live_view_app/pubspec.yaml
+++ b/apps/live_view_app/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   app_utilities: ^1.0.0
   firebase_core: ^3.9.0
   flutter_bloc: ^8.1.6
-  flutter_vlc_player: ^7.4.2
+  media_kit: ^1.1.11
+  media_kit_video: ^1.2.5
+  media_kit_libs_video: ^1.0.5
 
 dev_dependencies:
   flutter_test:
