--- a/apps/management_app/pubspec.yaml
+++ b/apps/management_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  car_management_bloc: ^1.0.0
   time_trial_api: ^1.0.0
   time_trial_bloc: ^1.0.0
   shared_car_components: ^1.0.0
