--- a/packages/car_management_bloc/pubspec.yaml
+++ b/packages/car_management_bloc/pubspec.yaml
@@ -1,4 +1,4 @@
-name: app_utilities
+name: car_management_bloc
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
@@ -8,13 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  flutter:
-    sdk: flutter
-  
   car_api: ^1.0.0
-  car_bloc: ^1.0.0
-  car_management_bloc: ^1.0.0
-  file_picker: ^8.1.6
+  local_storage: ^1.0.0
   flutter_bloc: ^8.1.6
   # path: ^1.8.0
 
