Added add car page and leaderboard page for management app

--- a/apps/management_app/pubspec.yaml
+++ b/apps/management_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  app_utilities: ^1.0.0
   car_management_bloc: ^1.0.0
   time_trial_api: ^1.0.0
   time_trial_bloc: ^1.0.0
