--- a/apps/control_app/android/app/src/main/AndroidManifest.xml
+++ b/apps/control_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="control_app"
+        android:label="Overflow Car"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
