--- a/apps/live_view_app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/apps/live_view_app/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = live_view_app
+PRODUCT_NAME = Live View
 
 // The application's bundle identifier
 PRODUCT_BUNDLE_IDENTIFIER = com.overflow.car-live-view
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.overflow. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 Xuan Han Tan. All rights reserved.
