--- a/apps/control_app/android/app/build.gradle
+++ b/apps/control_app/android/app/build.gradle
@@ -8,6 +8,17 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFilePath = System.getenv('CAR_RELEASE_KEY')
+if (keystorePropertiesFilePath != null) {
+    def keystorePropertiesFile = new File(keystorePropertiesFilePath)
+    if (keystorePropertiesFile.exists()) {
+        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+    } else {
+        throw new GradleException("Keystore properties file not found at release key path.")
+    }
+}
+
 android {
     namespace = "com.overflow.car"
     compileSdk = flutter.compileSdkVersion
@@ -33,11 +44,20 @@ android {
         versionName = flutter.versionName
     }
 
+    signingConfigs {
+        release {
+            keyAlias = keystoreProperties['keyAlias']
+            keyPassword = keystoreProperties['keyPassword']
+            storeFile = keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword = keystoreProperties['storePassword']
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig = signingConfigs.release
             proguardFiles getDefaultProguardFile(
                     'proguard-android-optimize.txt'),
                     'proguard-rules.pro'
