--- a/apps/control_app/pubspec.yaml
+++ b/apps/control_app/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   media_kit: ^1.1.11
   media_kit_video: ^1.2.5
   media_kit_libs_video: ^1.0.5
+  flutter_joystick: ^0.2.1
 
 dev_dependencies:
   flutter_test:
